--- a/02-MY451_2.rmd
+++ b/02-MY451_2.rmd
@@ -283,7 +283,9 @@ contingency tables:
   Sex                          strongly     Agree   nor disagree    Disagree   strongly    Total
 
   Male                           160         439         187          200         41        1027
+
   Female                         206         651         239          187         34        1317
+
   Total                          366        1090         426          387         75        2344
   ------------------------ --------------- ------- --------------- ---------- ---------- -------
 
@@ -366,11 +368,13 @@ in the bottom right corner of the table.
   Sex               strongly      Agree   nor disagree    Disagree   strongly    Total
 
   Male                0.068       0.187       0.080        0.085      0.017      0.438
+
   Female              0.088       0.278       0.102        0.080      0.015      0.562
+
   Total               0.156       0.465       0.182        0.165      0.032      1.000
   -------------- --------------- ------- --------------- ---------- ---------- -------
 
-  : (\#tab:t-sex-attitude-pr) *``The government should take measures to reduce differences in income levels''*: Two-way table of joint proportions of respondents in the survey
+  :(\#tab:t-sex-attitude-pr) *``The government should take measures to reduce differences in income levels''*: Two-way table of joint proportions of respondents in the survey
   example, with each combination of sex and attitude towards income
   redistribution. Data: European Social Survey, Round 5, 2010, UK respondents only.
 
@@ -411,10 +415,15 @@ as the proportions in the ‘Total’ row of Table \@ref(tab:t-sex-attitude-pr).
   Sex               strongly      Agree    nor disagree    Disagree   strongly    Total
 
   Male                160          439          187          200         41        1027
+
                     (0.156)      (0.428)      (0.182)      (0.195)    (0.040)     (1.0)
+
   Female              206          651          239          187         34        1317
+
                     (0.156)      (0.494)      (0.182)      (0.142)    (0.026)     (1.0)
+
   Total               366         1090          426          387         75        2344
+
                     (0.156)      (0.465)      (0.182)      (0.165)    (0.032)     (1.0)
   ------------- --------------- --------- --------------- ---------- ---------- -------
 
@@ -581,14 +590,23 @@ age groups.
   ------------- ------------------------------------------------------ ----------- ----------- ----------- --------
   \                                                                  \    Slightly           \        Very        \
   Age group                                                 Irrelevant   important   Important   important    Total
+
   Under 45                                                          37          45          38          26      146
+
                                                                (0.253)     (0.308)     (0.260)     (0.178)   (1.00)
+
   45–54                                                            111          77          57          37      282
+
                                                                (0.394)     (0.273)     (0.202)     (0.131)   (1.00)
+
   55–64                                                            153          49          31          20      253
+
                                                                (0.605)     (0.194)     (0.123)     (0.079)   (1.00)
+
   65 and over                                                      193          64          19          15      291
+
                                                                (0.663)     (0.220)     (0.065)     (0.052)   (1.00)
+
   Total                                                            494         235         145          98      972
   ------------- ------------------------------------------------------ ----------- ----------- ----------- --------
 
@@ -851,15 +869,22 @@ the largest frequency (for 0.8) is five. A frequency table of these
 values would be entirely unenlightening.
 
   --------------- ----------- ------
-  GDP                         
+  GDP                  \           \
   (thousands of               
   dollars)         Frequency       %
+
   less than 2.0       49        31.6
+
   2.0–4.9             32        20.6
+
   5.0–9.9             29        18.7
+
   10.0–19.9           21        13.5
+
   20.0–29.9           19        12.3
+
   30.0 or more         5         3.2
+
   Total               155       99.9
   --------------- ----------- ------
 
@@ -1304,8 +1329,11 @@ panel B of Figure \@ref(fig:f-skews) is (approximately) **symmetric**.
   \                                  Measures                  of central                       tendency          Measures           of            variation
   ---------------------- -------------------- --------------------------------------------- ----------------- ---------------- --------------- -----------------
   Variable                               Mode                    Median                           Mean             Range             IQR             s.d.
+
   Region                               Africa                      \*                              \*                \*              \*               \*
+
   Democracy index                           0                       6                        5.4$^{\dagger}$   10$^{\dagger}$   8$^{\dagger}$   3.9$^{\dagger}$
+
   GDP per capita                        \$800
                                    and \$1900                    \$4700                          \$8600           \$37300          \$9700           \$9450
   --------------------------------------------------------------------------------------------------------------------------------------------------------------
