--- a/08-MY451_8.rmd
+++ b/08-MY451_8.rmd
@@ -520,12 +520,12 @@ definition and thus of no real interest.
 
   ------------------------------------ -------------------------------- ------- ------- ----------- -------- -------
                               Variable                              GDP    Gini   Pol.    Corrupt.    School     IMR
-                GDP per capita \[GDP\]                                1   -0.39    0.51        0.77     0.42   -0.62
-            Income inequality \[Gini\]                            -0.39       1   -0.15       -0.27    -0.27    0.42
+                GDP per capita \[GDP ]                                1   -0.39    0.51        0.77     0.42   -0.62
+            Income inequality \[Gini ]                            -0.39       1   -0.15       -0.27    -0.27    0.42
              Political rights \[Pol. ]                             0.51   -0.15       1        0.59     0.40   -0.44
     Control of corruption \[Corrupt. ]                             0.77   -0.27    0.59           1     0.41   -0.64
-           School enrolment \[School\]                             0.42   -0.27    0.40        0.41        1   -0.73
-              Infant mortality \[IMR\]                            -0.62    0.42   -0.44       -0.64    -0.73       1
+           School enrolment \[School ]                             0.42   -0.27    0.40        0.41        1   -0.73
+              Infant mortality \[IMR ]                            -0.62    0.42   -0.44       -0.64    -0.73       1
   ------------------------------------ -------------------------------- ------- ------- ----------- -------- -------
 
   : (\#tab:t-civilsoc-r) Correlation matrix of six continuous variables in the Global Civil
@@ -629,19 +629,33 @@ line for the points.](imr1){width="13.5cm"}
   ------------------------------------------------------------------ ------------------------------- ----------- ------------ ------------
   \                                                                                                \      School   Control of       Income
                                                                                                  IMR   enrolment   corruption   inequality
+
   *Summary statistics*
+
   Mean                                                                                           4.3        86.1         50.1         40.5
+
   std. deviation                                                                                 4.0        16.7         28.4         10.2
+
   Minimum                                                                                        0.3        30.0          3.6         24.4
+
   Maximum                                                                                       15.6       109.0        100.0         70.7
+
   *Correlation matrix*
+
   IMR                                                                                              1       -0.75        -0.60         0.39
+
   School enrolment                                                                             -0.75           1         0.39        -0.27
+
   Control of corruption                                                                        -0.60        0.39            1        -0.27
+
   Income inequality                                                                             0.39       -0.27        -0.27            1
+
   *Means for countries in different income categories*
+
   Low income ($n=41$)                                                                            8.2        72.1         27.5         41.7
+
   Middle income ($n=48$)                                                                         2.8        92.5         50.8         43.3
+
   High income ($n=22$)                                                                           0.5        98.4         90.7         32.0
   ------------------------------------------------------------------ ------------------------------- ----------- ------------ ------------
 
@@ -739,8 +753,6 @@ model**:
     small number of model parameters, in the case of the simple linear
     regression model just $\alpha$, $\beta$ and $\sigma^{2}$.
 
-![(\#fig:f-spss-linreg) SPSS output for a simple linear regression model for Infant mortality rate given School enrolment in the Global Civil Society data.](spsslinreg){width:15.5cm}
-
 Of course, not all models are equally appropriate for given data, and
 some will be both wrong and useless. The results from a model should
 thus be seriously presented and interpreted only if the model is deemed
@@ -764,7 +776,7 @@ model, they are of course only estimates (of a kind explained in the
 next section) of those parameters. Other parts of the SPSS output will
 be explained later in this chapter.
 
-\includegraphics[bb=100 90 470 590, angle=-90, width=144mm]{spsslinreg}
+![(\#fig:f-spss-linreg) SPSS output for a simple linear regression model for Infant mortality rate given School enrolment in the Global Civil Society data.](spsslinreg){width="15.5cm"}
 
 According to the model, the conditional mean (also often known as the
 conditional **expected value**) of $Y$ given $X$ in the population is
@@ -952,7 +964,7 @@ the observed value is above the fitted line, as shown in Figure
 ![(\#fig:f-residuals) Illustration of the quantities involved in the definitions of least
 squares estimates and the coefficient of determination $R^{2}$. See the
 text for explanation.](lmresids){width="13.5cm"}
-
+<!--
 $Y_{i}-\hat{Y}_{i}$
 
 $Y_{i}-\hat{Y}_{i}$
@@ -964,7 +976,7 @@ $\hat{Y}_{i}-\bar{Y}$
 $Y_{i}-\bar{Y}$
 
 $\hat{Y}=\hat{\alpha}+\hat{\beta} X$
-
+-->
 The second point shown in Figure \@ref(fig:f-residuals) corresponds to the
 observation for Ghana, for which $X_{i}=58.0$ and $Y_{i}=5.7$. The
 fitted value is then $\hat{Y}_{i}=19.736-0.179\times 58.0=9.4$ and the
@@ -1114,6 +1126,7 @@ this language, (\@ref(eq:ss-decomp)) can be stated as
   ------------------------ ----- --------------------- ----- -----------------------
    Total variation of $Y$    =    Variation explained    +    Unexplained variation
                                      by regression           
+
            $TSS$            $=$          $SSM$          $+$           $SSE$
   ------------------------ ----- --------------------- ----- -----------------------
 
@@ -1509,9 +1522,13 @@ reports.
   ----------------------------------------------------------------------------- ------------- ---------- ------- ----------- -------------------
   Explanatory                                                                               \   Standard       \           \   95 % Confidence
   variable                                                                        Coefficient      error     $t$   $P$-value      interval
+
   Constant                                                                              16.40                                
+
   School enrolment (%)                                                                 -0.139      0.014   -9.87    $<0.001$  (-0.167; -0.111 )
+
   Control of corruption                                                                -0.046      0.008   -5.53    $<0.001$  (-0.062; -0.029)
+
   Income inequality                                                                     0.055      0.022    2.50       0.014   (0.011; 0.098)
   ----------------------------------------------------------------------------- ------------- ---------- ------- ----------- -------------------
 
@@ -1934,16 +1951,23 @@ coefficients of the dummy variables.
   --------------------------------------------------------------------- ------------- ------- --------- ----------- ----------------
   Explanatory variable                                                              \    Std.         \           \    95 % Conf. 
                                                                           Coefficient   error       $t$   $P$-value     interval
+
   Constant                                                                      12.00                               
+
   School enrolment (%)                                                       $-0.091$   0.016   $-5.69$    $<0.001$    $(-0.123;
                                                                                                                         -0.059)$
+
   Control of corruption                                                      $-0.020$   0.011   $-1.75$     $0.083$    $(-0.043;
                                                                                                                         0.003)$
+
   Income inequality                                                             0.080   0.021      3.75    $<0.001$  (0.038; 0.122)
+
   Income level                                                                                                      
   (Reference group: Low)                                                                                            
+
   Middle                                                                     $-3.210$   0.631   $-5.09$    $<0.001$    $(-4.461;
                                                                                                                         -1.958)$
+
   High                                                                       $-3.296$   1.039   $-3.17$       0.002    $(-5.357;
                                                                                                                         -1.235)$
   ----------------------------------------------------------------------------------------------------------------------------------
@@ -2192,46 +2216,75 @@ might have had a differential impact on different types of restaurants
 over the study period. Summary statistics for the variables are shown in
 Table \@ref(tab:t-fastfood-descr).
 
-  ---------------------------------------- ------ ------- --------------------------------------------- -------------- ------------
-  \                                             \       \                                       Minimum wage variable    Response    
-                                                                                               Affected    Wage gap     variable:
-                                                                                                          (mean for     Employment
-                                                                                                           affected       change
-  Group                                         %   $(n)$                                       % ($n$)  restaurants)     (mean)
+  ---------------------------------------- ------ ------- --------------------------------------------- --------------- ------------
+  \                                             \       \                                       Minimum  wage variable       \
+
+  Group                                         %   $(n)$                                      Affected    Wage gap      Response
+                                                                                                % ($n$)   (mean for      variable:
+                                                                                                           affected      Employment
+                                                                                                         restaurants)     change
+                                                                                                                          (mean)
+
   Overall                                     100   (368)                                    72.8 (268)     0.115        $-0.30$
+
   Ownership                                                                                                            
+
   Franchisee                                 64.7   (238)                                    71.8 (171)     0.122        $-0.17$
+
   Company                                    35.3   (130)                                     74.6 (97)     0.103        $-0.52$
+
   Chain                                                                                                                
+
   Burger King                                41.0   (151)                                    73.5 (111)     0.129        $+0.02$
+
   Roy Rogers                                 24.7    (91)                                     72.5 (66)     0.104        $-1.89$
+
   Wendy’s                                    13.0    (48)                                     60.4 (29)     0.086        $-0.28$
+
   KFC                                        21.2    (78)                                     79.5 (62)     0.117        $+0.94$
   ---------------------------------------- ------ ------- --------------------------------------------- -------------- ------------
 
-  : (\#tab:t-fastfood-descr) Summary statistics for the variables considered in the minimum wage
+  :(\#tab:t-fastfood-descr) Summary statistics for the variables considered in the minimum wage
   example of Section \@ref(ss-regression-dummies-example). Mean employment change: Among unaffected restaurants: $-2.93$; Among affected restaurants: $+0.68$.
 
   ------------------------------------------------------ --------------------------------- --------------------------------- ------------- -----------
   \                                                                              Model (1)                                 \     Model (2)           \
                                                                                Coefficient                             ($t$)   Coefficient       ($t$)
   Variable                                                                     (std error)                         $P$-value   (std error)   $P$-value
+
   Constant                                                                                                                                 
+
                                                                                      -2.63                                           -1.54
+
   Affected by the increase                                                            3.56                            (3.50)             —           —
+
                                                                                     (1.02)                             0.001             —           —
+
   Wage gap                                                                               —                                 —         15.88      (2.63)
+
                                                                                          —                                 —        (6.04)       0.009
+
   Ownership (vs. Franchisee)                                                                                                               
+
   Company                                                                             0.22                            (0.20)          0.43      (0.40)
+
                                                                                     (1.06)                              0.84        (1.07)        0.69
+
   Chain (vs. Burger King)                                                                                                                  
+
   Roy Rogers                                                                         -2.00                           (-1.56)         -1.84     (-1.43)
+
                                                                                     (1.28)                              0.12        (1.29)        0.15
+
   Wendy’s                                                                             0.15                            (0.11)          0.36      (0.24)
+
                                                                                     (1.44)                              0.92        (1.46)        0.81
+
   KFC                                                                                 0.64                            (0.51)          0.81      (0.64)
+
                                                                                     (1.25)                              0.61        (1.26)        0.52
+
+
 
   $R^{2}$                                                                            0.046                                           0.032
   ----------------------------------------------------------------------------------------------------------------------------------------------------
