--- a/09-MY451_9.rmd
+++ b/09-MY451_9.rmd
@@ -181,15 +181,26 @@ original two-way table are thus unchanged after controlling for sex.
   -------------------------------------------------------- ------------------------------------------------------- ----------- ----------- ----------- -------
   **MEN**                                                                                                        \    Slightly           \        Very       \
   Age group                                                                                             Irrelevant   important   Important   important   Total
+
   Under 45                                                                                                      29          35          30          22     116
+
                                                                                                              0.250       0.302       0.259       0.190   1.000
+
   45–54                                                                                                         83          60          52          29     224
+
                                                                                                              0.371       0.268       0.232       0.129   1.000
+
   55–64                                                                                                        116          40          28          16     200
+
+
                                                                                                              0.580       0.200       0.140       0.080   1.000
+
   65 and over                                                                                                  150          53          16          12     231
+
                                                                                                              0.649       0.229       0.069       0.052   1.000
+
   Total                                                                                                        378         188         126          79     771
+
                                                                                                              0.490       0.244       0.163       0.102   1.000
   -------------------------------------------------------- ------------------------------------------------------- ----------- ----------- ----------- -------
 
@@ -199,17 +210,26 @@ original two-way table are thus unchanged after controlling for sex.
 
   -------------------------------------------------------- ------------------------------------------------------- ----------- ----------- ----------- -------
   **WOMEN**                                                                                                           Slightly                    Very
-
   Age group                                                                                             Irrelevant   important   Important   important   Total
+
   Under 45                                                                                                       8          10           8           4      30
+
                                                                                                              0.267       0.333       0.267       0.133   1.000
+
   45–54                                                                                                         28          17           5           8      58
+
                                                                                                              0.483       0.293       0.086       0.138   1.000
+
   55–64                                                                                                         37           9           3           4      53
+
                                                                                                              0.698       0.170       0.057       0.075   1.000
+
   65 and over                                                                                                   43          11           3           3      60
+
                                                                                                              0.717       0.183       0.050       0.050   1.000
+
   Total                                                                                                        116          47          19          19     201
+
                                                                                                              0.577       0.234       0.095       0.095   1.000
   -------------------------------------------------------- ------------------------------------------------------- ----------- ----------- ----------- -------
 
@@ -260,31 +280,47 @@ $\chi^{2}=344$ and $P<0.001$.
   Class                                Group                                         Yes      No   Total
 
   First                                Man                                            57     118     175
+
                                                                                    0.326   0.674   1.000
+
                                        Woman or child                                146       4     150
+
                                                                                    0.973   0.027   1.000
+
                                        Total                                         203     122     325
+
                                                                                    0.625   0.375   1.000
 
   Second                               Man                                            14     154     168
+
                                                                                    0.083   0.917   1.000
+
                                        Woman or child                                104      13     117
+
                                                                                    0.889   0.111   1.000
+
                                        Total                                         118     167     285
+
                                                                                    0.414   0.586   1.000
 
   Third                                Man                                            75     387     462
+
                                                                                    0.162   0.838   1.000
+
                                        Woman or child                                103     141     244
+
                                                                                    0.422   0.578   1.000
+
                                        Total                                         178     528     706
+
                                                                                    0.252   0.748   1.000
 
   Total                                                                              499     817    1316
+
                                                                                    0.379   0.621   1.000
   ------------------------------------ ---------------- -------------------------------- ------- -------
 
-  : (\#tab:t-titanic3) Survival status of the passengers of the *Titanic*, classified by
+  :(\#tab:t-titanic3) Survival status of the passengers of the *Titanic*, classified by
   class and sex. The numbers below the frequencies are proportions
   within rows.
 
@@ -437,7 +473,7 @@ all the 582 smokers, 9% of all the 732 nonsmokers and 9% of the 1314
 respondents overall were in this age group.
 
   --------- ------------- --------------------------------------- ----------------------------- ------------------------ -------
-          \ \                        Row and column \%:                         \                        Total:                \
+          \ \                        Row and column \%                         \                        Total                  \
     % Alive Age group                     Smokers                          Nonsmokers                      \%              Count
          97 18–24                           47                                 53                         100                117
                                            (10)                                (9)                        (9)            
